--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Cipher CLI",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "cross-env NODE_OPTIONS=--experimental-vm-modules npx jest"
   },
   "type": "module",
   "repository": {
@@ -18,8 +18,8 @@
     "url": "https://github.com/Eyvgeniy/rss-node2021q4-project1/issues"
   },
   "homepage": "https://github.com/Eyvgeniy/rss-node2021q4-project1#readme",
-  "dependencies": {},
   "devDependencies": {
+    "cross-env": "^7.0.3",
     "eslint": "^8.2.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.3.0",
